# effects

./: .gitignore  .hindent.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  effects.cabal  package.yaml  stack.yaml  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: Main.hs
scripts/: Dockerfile  lint-general.rb
src/: BespokeMonad.hs  BigMonad.hs  ExtensibleEffects.hs  FreeMonad.hs  Greet.hs  Modules.hs  ModulesPure.hs  MonadTransformers.hs
test/: BespokeMonadSpec.hs  BigMonadSpec.hs  ExpectedOutput.hs  ExtensibleEffectsSpec.hs  FreeMonadSpec.hs  GreetSpec.hs  MainSpec.hs  MonadTransformersSpec.hs  Spec.hs
