name:                effects
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stepchowfun/effects#readme
license:             BSD3
license-file:        LICENSE
author:              Stephan Boyer
maintainer:          stephan@stephanboyer.com
copyright:           (c) 2018 Stephan Boyer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     BespokeMonad
                     , ExtensibleEffects
                     , FreeMonad
                     , Modules
                     , MonadTransformers
  build-depends:       MonadRandom
                     , base >= 4.7 && < 5
                     , extensible-effects
                     , free
                     , mtl
                     , protolude
                     , random
                     , registry
  default-language:    Haskell2010

  ghc-options:       -fhide-source-paths

executable effects-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhide-source-paths
  build-depends:       base
                     , effects
  default-language:    Haskell2010

test-suite effects-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainSpec.hs
  other-modules:       BespokeMonadSpec
                     , ExpectedOutput
                     , ExtensibleEffectsSpec
                     , FreeMonadSpec
                     , MonadTransformersSpec
  build-depends:       MonadRandom
                     , base
                     , effects
                     , extensible-effects
                     , hspec
                     , hspec-core
                     , mtl
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fhide-source-paths
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stepchowfun/effects
